fix: GitHub PagesでのJS/CSS 404エラーを修正
- vite.config.tsのbaseパスを修正
- GitHub Actionsワークフローでruleclickerサブディレクトリを作成

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,10 +40,17 @@ jobs:
         working-directory: docs/ruleclicker
         run: npm run build
 
+      - name: Prepare deployment directory
+        run: |
+          mkdir -p ./deploy
+          cp -r docs/ruleclicker/dist/* ./deploy/
+          mkdir -p ./deploy/ruleclicker
+          cp -r docs/ruleclicker/dist/* ./deploy/ruleclicker/
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/ruleclicker/dist
+          path: ./deploy
 
   deploy:
     environment:
