fix: TypeScriptビルドエラーを修正
- tsconfig.jsonにjsx設定を追加
- 不要なReact importを削除
- イベント型を正しくimport

--- a/docs/ruleclicker/tsconfig.json
+++ b/docs/ruleclicker/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "jsx": "react-jsx",
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
